<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/settings_bg_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp">
        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/arrow_back"
            android:maxWidth="16dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_settings_text"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0"
            android:textAllCaps="false"
            android:textSize="@dimen/text_header_size"
            android:textColor="@color/text_color"
            android:layout_marginLeft="28dp" />
    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_menu_item_height_size"
        android:paddingHorizontal="@dimen/settings_menu_item_padding_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:letterSpacing="0"
            android:text="@string/settings_dark_theme_text"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_menu_text_size"
            android:layout_centerVertical="true" />
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            app:trackTint="@color/switch_track_color"
            app:thumbTint="@color/switch_thumb_color" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_menu_item_height_size"
        android:paddingHorizontal="@dimen/settings_menu_item_padding_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:letterSpacing="0"
            android:text="@string/settings_share_text"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_menu_text_size"
            android:layout_centerVertical="true" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share"
            android:layout_gravity="center_vertical"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:maxWidth="16dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_menu_item_height_size"
        android:paddingHorizontal="@dimen/settings_menu_item_padding_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:letterSpacing="0"
            android:text="@string/settings_support_text"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_menu_text_size"
            android:layout_centerVertical="true" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/support"
            android:layout_gravity="center_vertical"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:maxWidth="20dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_menu_item_height_size"
        android:paddingHorizontal="@dimen/settings_menu_item_padding_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:letterSpacing="0"
            android:text="@string/settings_agreement_text"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_menu_text_size"
            android:layout_centerVertical="true" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_forward"
            android:layout_gravity="center_vertical"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:maxWidth="8dp"
            />
    </RelativeLayout>


</LinearLayout>